objects/ssot__ServiceAppointment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__rel_1702009442908_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointment_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ServiceAppointment_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1702009442908_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009443217_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointment_DurationUOMId_map_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>ServiceAppointment_DurationUOMId_map_rel</relationshipLabel>
        <relationshipName>rel_1702009443217_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009444735_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointment_CreatedById_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceAppointment_CreatedById_map_U_rel</relationshipLabel>
        <relationshipName>rel_1702009444735_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Service Appointment</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Appointment</referenceEntityGroup>
        <referenceEntityName>ServiceAppointment</referenceEntityName>
        <referenceEntitySubjectArea>Appointment</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>